--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="#">New Arrivals</a>
             <a href="#">Pages</a>
             <a href="#">Contact</a>
-            <a><i class="fas fa-search"></i></a>
+            <a><i class="fa fa-search"></i></a>
         </nav>
     </header>
     <div class="banner">
